syntax = "proto3";

option java_multiple_files = true;
option go_package = "github.com/SourceForgery/tachikoma";

package com.sourceforgery.tachikoma.grpc.frontend.auth;

// The x-webtoken header is divided into two parts divided by a dot (.) (both base64 encoded)
// The first part is the SHA1 HMAC
// The second is this message
message WebTokenAuthData {
    sint64 user_id = 101;
    sint64 account_id = 102;
    AuthRole authentication_role = 103;
}

// The different roles for a login
enum AuthRole {
    // "Normal" user allowed to send emails, check statistics, and basically anything
    // but modifying users
    FRONTEND = 0;
    FRONTEND_ADMIN = 1;
    BACKEND = 2;
}

// Login service to handle webtokens
service LoginService {
    // login. Will return either valid LoginResponse OR an error code
    rpc Login(LoginRequest) returns (LoginResponse);
}

// Login request
message LoginRequest {
    // The username trying to log in
    string username = 101;
    // The password of the user
    string password = 102;
}

// A valid response with the header to add to requests
message LoginResponse {
    // send this as a "x-webtoken" header on all subsequent requests
    string auth_header = 101;
}